# chronos

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirement.txt  requirement_test.txt
src/: chronos_app.py  main.py  time_interval.py  validation.py
src/chronos/: chronos_app.py  main.py  time_interval.py
src/chronos/components/: buttons.py  fields.py  ids.py  layout.py  state_color.py  styles.py  tables.py
src/components/: buttons.py  ids.py  layout.py  state_color.py  styles.py
tests/: __init__.py  test_buttons_callbacks.py  test_fields_callbacks.py  test_time_interval.py
